fix: update inspector styles for improved visibility and consistency

--- a/website/src/css/modules/showcase.module.scss
+++ b/website/src/css/modules/showcase.module.scss
@@ -88,7 +88,9 @@
     .inspector {
         position: absolute;
         width: 500px;
-        background-color: rgb(83, 121, 133);
+        background-color: #292a2c;
+        border: 1.5px solid #444950;
+        border-radius: 8px;
 
         opacity: 0;
         transition: all 0.10s ease-in;
